chgmgmt_build/src/objects/Blog_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WordPress__c</fullName>
        <label>WordPress</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Blog_Entry</label>
    <nameField>
        <label>Blog_Entry名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blog_Entry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>